# athena

./: .gitignore  Cargo.toml  LICENSE  README.md
ArgosCI/: config.json
docs/superpowers/plans/: 2026-06-18-nemesis-error-integration.md  2026-06-19-kahns-weighted-testing.md
docs/superpowers/specs/: 2026-06-18-nemesis-error-integration-design.md  2026-06-19-kahns-weighted-testing-design.md
src/: lib.rs
src/error/: mod.rs
src/tools/: bitreader.rs  mod.rs
src/tools/bit_flags/: mod.rs  u16_flag.rs  u32_flag.rs  u8_flag.rs
src/tools/byte_bit/: decoder.rs  encoder.rs  mod.rs  parity.rs  reader.rs  tests.rs  writer.rs
src/tools/checksum/crc32/: mod.rs
src/tools/delta/: mod.rs  tests.rs
src/tools/leb128/: bit_chain.rs  mod.rs  signed_v3.rs  tests.rs
src/tools/process/: mod.rs  unix.rs
src/tools/run_length/: mod.rs  tests.rs
src/tools/system/: mod.rs
src/utils/: mod.rs
src/utils/checksum/: mod.rs
src/utils/checksum/crc32/: mod.rs
src/utils/compression/: mod.rs
src/utils/compression/delta/: mod.rs  tests.rs
src/utils/compression/lzw/: mod.rs  tests.rs
src/utils/compression/run_length/: tests.rs
src/utils/process/: mod.rs  unix.rs
src/utils/rng_api/: mod.rs
src/utils/sorting/: mod.rs
src/utils/sorting/topological_sort/: kahns.rs  kahns_weighted.rs  mod.rs
src/utils/traits/: mod.rs  signed.rs  tests.rs  unsigned.rs
src/value/: array.rs  cmd_char.rs  data.rs  metadata.rs  mod.rs  num.rs  object.rs  ordered_object.rs  table.rs  tests.rs  uuid.rs
