[package]
name = "athena"
version = "1.3.0"
edition = "2024"

[dependencies]
libc = "0.2.183"
aequa = { git = "https://github.com/xqhare/aequa" }

[features]
encoding_decoding = ["traits"]
compression = ["encoding_decoding"]
checksum = []
byte_bit = []
traits = []
bit_flags = []
process = []
sorting = []

[package.metadata.docs.rs]
all-features = true
