[package]
name = "athena"
version = "2.1.0"
edition = "2024"

[dependencies]
libc = "0.2.183"
aequa = { git = "https://github.com/xqhare/aequa" }
nemesis = { git = "https://github.com/xqhare/nemesis" }

[features]
encoding_decoding = ["traits"]
compression = ["encoding_decoding"]
checksum = []
byte_bit = []
traits = []
bit_flags = ["traits"]
process = []
sorting = []
rng_api = []
system = []

[package.metadata.docs.rs]
all-features = true
